# aelys_lang

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md
aelys/: Cargo.toml  README.md  build.rs
aelys-cli/: Cargo.toml  README.md
aelys-cli/src/: main.rs
aelys-cli/src/cli/: mod.rs  vm_config.rs
aelys-cli/src/cli/args/: mod.rs  parse.rs  usage.rs
aelys-cli/src/cli/commands/: asm.rs  compile.rs  repl.rs  run.rs
aelys-cli/tests/: cli_args_tests.rs  cli_dispatch_tests.rs  cli_repl_tests.rs  cli_run_bytecode_tests.rs  cli_run_tests.rs  cli_vm_config_tests.rs
aelys-driver/: Cargo.toml  README.md
aelys-driver/src/api/: call.rs  file.rs  mod.rs  repl.rs  run.rs  vm.rs
aelys-driver/src/modules/: mod.rs  needs.rs
aelys-driver/src/modules/loader/: checksum.rs  compile.rs  exports.rs  init.rs  load.rs  mod.rs  native_error.rs  native_load.rs  resolution.rs  stdlib.rs  stdlib_loaded.rs  stdlib_register.rs  types.rs
aelys-driver/src/pipeline/: compile.rs  mod.rs  pipeline.rs  run.rs  standard.rs  types.rs
aelys-driver/src/pipeline/stages/: compiler.rs  debug_strip.rs  lexer.rs  mod.rs  optimization.rs  parser.rs  type_inference.rs  vm.rs
aelys-modules/: Cargo.toml  README.md
aelys-modules/src/: lib.rs  manifest.rs
aelys-modules/src/loader/: resolution.rs  types.rs
aelys-modules/src/native/: loader.rs
aelys-modules/src/resolution/: mod.rs  patterns.rs
aelys-runtime/: Cargo.toml
aelys-runtime/src/native/: mod.rs
aelys-runtime/src/stdlib/: bytes.rs  convert.rs  fs.rs  io.rs  math.rs  mod.rs  net.rs  string.rs  sys.rs  time.rs
aelys-runtime/src/vm/: alloc.rs  builtins.rs  call_data.rs  calls.rs  closures.rs  comparison.rs  config.rs  core.rs  errors.rs  execute.rs  frame.rs  frames.rs  gc.rs  helpers.rs  init.rs  mod.rs  native_registry.rs  repl.rs
aelys-runtime/src/vm/args/: parse.rs
aelys-runtime/src/vm/arithmetic/: mod.rs  numbers.rs
aelys-runtime/src/vm/call_api/: cached.rs  kinds.rs
aelys-runtime/src/vm/dispatch/: run.rs
aelys-runtime/src/vm/dispatch/ops/: arrays.inc  call_global.inc  closures.inc  (+5 more)
aelys-runtime/src/vm/globals/: access.rs  layout.rs  sync.rs
aelys-runtime/src/vm/manual_heap/: access.rs  alloc.rs  heap.rs  mod.rs
aelys-runtime/src/vm/verifier/: checks.rs  constants.rs
aelys/src/: lib.rs
aelys/src/api/: call.rs  mod.rs  repl.rs  run.rs  vm.rs
aelys/tests/: aasm_roundtrip_tests.rs  aasm_unit_tests.rs  adversarial_tests.rs  air_cast_tests.rs  air_layout_tests.rs  air_lower_tests.rs  air_print_tests.rs  air_validation_tests.rs  allocation_guard_tests.rs  array_tests.rs  avbc_manifest_tests.rs  bitwise_tests.rs  builtins_tests.rs  byte_buffer_tests.rs  cast_tests.rs  closure_tests.rs  compiler_call_tests.rs  compiler_expr_tests.rs  compiler_functions_tests.rs  compiler_tests.rs  compound_assign_tests.rs  dx_improvement_tests.rs  edge_cases_tests.rs  error_format_test.rs  facade_api_smoke.rs  fmt_string_tests.rs  frame_tests.rs  function_call_api_tests.rs  global_layout_tests.rs  heap_tests.rs  inline_cache_tests.rs  inline_decorator_tests.rs  integration_test.rs  integration_tests.rs  lexer_test.rs  llvm_codegen_e2e_tests.rs  manifest_tests.rs  manual_heap_tests.rs  memory_safety_tests.rs  memory_tests.rs  (+31 more)
aelys/tests/benchmarks/: bench_call_overhead.aelys  bench_fib35_typed.aelys  bench_global_calls.aelys  bench_inline_cache.aelys  bench_mutual_recursion.aelys
aelys/tests/common/: mod.rs
aelys/tests/fixtures/native_cycle_a/: Cargo.toml
aelys/tests/fixtures/native_cycle_b/: Cargo.toml
aelys/tests/fixtures/native_dep_a/: Cargo.toml
aelys/tests/fixtures/native_dep_b/: Cargo.toml
aelys/tests/fixtures/native_dep_c/: Cargo.toml
aelys/tests/fixtures/native_hot_a/: Cargo.toml
aelys/tests/fixtures/native_hot_b/: Cargo.toml
aelys/tests/fixtures/native_tamper/: Cargo.toml
aelys/tests/fixtures/native_test/: Cargo.toml
aelys/tests/fixtures/native_zero_hash/: Cargo.toml
aelys/tests/modules/basic/: debug.aelys  main.aelys  utils.aelys
aelys/tests/modules/circular/: a.aelys  b.aelys
aelys/tests/modules/errors/: not_found.aelys  private_access.aelys  std_not_available.aelys  utils.aelys
aelys/tests/modules/mod_index/: main.aelys
aelys/tests/modules/nested/: main.aelys
aelys/tests/security/: allocation_bomb.aelys  gc_torture.aelys  nan_boxing_torture.aelys  register_stress.aelys  smash_oob.aelys  stackoverflow.aelys  use_after_free.aelys
aelys/tests/test_opt/: combined_opt.aelys  dead_code.aelys  for_loop_test.aelys
cli/: Cargo.toml
cli/src/cli/: mod.rs
cli/src/cli/args/: mod.rs  parse.rs  usage.rs
cli/src/cli/commands/: compile.rs  repl.rs  run.rs
cli/tests/: cli_args_tests.rs  cli_asm_tests.rs  cli_compile_manifest_tests.rs  cli_compile_tests.rs  cli_run_tests.rs  cli_vm_config_tests.rs
driver/: Cargo.toml
driver/src/: lib.rs
driver/src/api/: file.rs  llvm.rs  mod.rs  repl.rs  vm.rs
driver/src/modules/: needs.rs
driver/src/modules/loader/: checksum.rs  compile.rs  init.rs  load.rs  native.rs  native_deps.rs  native_fingerprint.rs  native_load.rs  needs.rs  stdlib_loaded.rs  stdlib_register.rs  types.rs
driver/src/pipeline/: cache.rs  pipeline.rs  run.rs  standard.rs  types.rs
driver/src/pipeline/stages/: air_lower.rs  compiler.rs  debug_strip.rs  lexer.rs  mod.rs  type_inference.rs
modules/: Cargo.toml
modules/src/loader/: mod.rs  resolution.rs  types.rs
modules/src/native/: loader.rs  mod.rs
runtime/: Cargo.toml  README.md
runtime/src/: lib.rs
runtime/src/stdlib/: bytes.rs  fs.rs  io.rs  mod.rs  net.rs  sys.rs  time.rs
runtime/src/vm/: alloc.rs  closures.rs  config.rs  config_access.rs  core.rs  errors.rs  gc.rs  helpers.rs  init.rs  mod.rs  native.rs  repl.rs  resources.rs
runtime/src/vm/args/: mod.rs  parse.rs
runtime/src/vm/arithmetic/: strings.rs
runtime/src/vm/call_api/: kinds.rs  mod.rs  public.rs  value.rs
runtime/src/vm/dispatch/: cache.rs  decode.rs  mod.rs  run.rs
runtime/src/vm/globals/: mod.rs  sync.rs
runtime/src/vm/manual_heap/: access.rs  error.rs  guard.rs
runtime/src/vm/verifier/: mod.rs
(+548 files in other folders)
