[workspace]
resolver = "3"
members = [
    "aelys",
    "aelys-common",
    "aelys-syntax",
    "aelys-frontend",
    "aelys-sema",
    "aelys-opt",
    "aelys-bytecode",
    "aelys-backend",
    "aelys-runtime",
    "aelys-modules",
    "aelys-driver",
    "aelys-cli",
    "aelys-native",
    "aelys-native-macros",
]

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
debug = false
overflow-checks = false
debug-assertions = false
rpath = false
