[workspace]
resolver = "3"
members = [
    "aelys",
    "common",
    "syntax",
    "frontend",
    "sema",
    "opt",
    "bytecode",
    "backend",
    "runtime",
    "modules",
    "driver",
    "cli",
    "native",
    "native-macros",
]

[workspace.package]
version = "0.19.13-a"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3
strip = true
debug = false
overflow-checks = false
debug-assertions = false
rpath = false