[package]
name = "aelys-driver"
version.workspace = true
edition = "2024"

[dependencies]
aelys-common = { path = "../aelys-common" }
aelys-syntax = { path = "../aelys-syntax" }
aelys-frontend = { path = "../aelys-frontend" }
aelys-sema = { path = "../aelys-sema" }
aelys-opt = { path = "../aelys-opt" }
aelys-backend = { path = "../aelys-backend" }
aelys-bytecode = { path = "../aelys-bytecode" }
aelys-runtime = { path = "../aelys-runtime" }
aelys-modules = { path = "../aelys-modules" }
aelys-native = { path = "../aelys-native" }
semver = "1"
