[package]
name = "aelys-runtime"
version.workspace = true
edition = "2024"

[dependencies]
aelys-common = { path = "../aelys-common" }
aelys-syntax = { path = "../aelys-syntax" }
aelys-bytecode = { path = "../aelys-bytecode" }
aelys-modules = { path = "../aelys-modules" }
aelys-native = { path = "../aelys-native" }
libc = "0.2"
