[package]
name = "aelys"
version.workspace = true
edition = "2024"

[dependencies]
aelys-common = { path = "../common" }
aelys-syntax = { path = "../syntax" }
aelys-frontend = { path = "../frontend" }
aelys-sema = { path = "../sema" }
aelys-opt = { path = "../opt" }
aelys-bytecode = { path = "../bytecode" }
aelys-backend = { path = "../backend" }
aelys-runtime = { path = "../runtime" }
aelys-modules = { path = "../modules" }
aelys-driver = { path = "../driver" }

[dev-dependencies]
tempfile = "3"
aelys-opt = { path = "../opt" }
aelys-air = { path = "../air" }
aelys-bytecode = { path = "../bytecode" }

[build-dependencies]
regex = "1"

[lib]
doctest = false