[package]
name = "aelys"
version.workspace = true
edition = "2024"

[dependencies]
aelys-common = { path = "../common" }
aelys-syntax = { path = "../syntax" }
aelys-frontend = { path = "../frontend" }
aelys-sema = { path = "../sema" }
aelys-opt = { path = "../opt" }
aelys-bytecode = { path = "../bytecode" }
aelys-backend = { path = "../backend" }
aelys-runtime = { path = "../runtime" }
aelys-modules = { path = "../modules" }
aelys-driver = { path = "../driver" }

[dev-dependencies]
tempfile = "3"
aelys-opt = { path = "../opt" }
aelys-air = { path = "../air" }
aelys-bytecode = { path = "../bytecode" }
aelys-driver = { path = "../driver", features = ["llvm-backend"] }
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", default-features = false, features = ["llvm18-1", "target-x86"] }

[build-dependencies]
regex = "1"

[lib]
doctest = false
