[package]
name = "aelys-cli"
version.workspace = true
edition = "2024"

[dependencies]
aelys = { path = "../aelys" }
aelys-backend = { path = "../backend" }
aelys-bytecode = { path = "../bytecode" }
aelys-common = { path = "../common" }
aelys-driver = { path = "../driver" }
aelys-frontend = { path = "../frontend" }
aelys-opt = { path = "../opt" }
aelys-runtime = { path = "../runtime" }
aelys-sema = { path = "../sema" }
aelys-syntax = { path = "../syntax" }
aelys-modules = { path = "../modules" }
aelys-native = { path = "../native" }
semver = "1.0"

[dev-dependencies]

[lib]
doctest = false