[package]
name = "aelys-driver"
version.workspace = true
edition = "2024"

[dependencies]
aelys-common = { path = "../common" }
aelys-syntax = { path = "../syntax" }
aelys-frontend = { path = "../frontend" }
aelys-sema = { path = "../sema" }
aelys-opt = { path = "../opt" }
aelys-air = { path = "../air" }
aelys-backend = { path = "../backend" }
aelys-codegen = { path = "../codegen", optional = true }
aelys-bytecode = { path = "../bytecode" }
aelys-runtime = { path = "../runtime" }
aelys-modules = { path = "../modules" }
aelys-native = { path = "../native" }
semver = "1"

[features]
default = []
llvm-backend = ["dep:aelys-codegen"]

[lib]
doctest = false
