[package]
name = "aelys-modules"
version.workspace = true
edition = "2024"

[dependencies]
aelys-common = { path = "../common" }
aelys-syntax = { path = "../syntax" }
aelys-native = { path = "../native" }
toml = "0.8"
libloading = "0.8"
libc = "0.2"
serde = { version = "1", features = ["derive"] }

[lib]
doctest = false